[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "Fetch PubMed papers and filter by pharma/biotech affiliation"
authors = [
    { name = "Aryan Gupta", email = "aryangupta6227@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pubmed", "cli", "biotech", "pharma", "papers", "ncbi"]
dependencies = [
    "requests >=2.32.4,<3.0.0",
    "pandas >=2.3.1,<3.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
get-papers-list = "cli:main"
