[tool.poetry]
name = "pubmed-affiliation-cli-aryan6227"
version = "0.1.0"
description = "Fetch PubMed papers and filter by pharma/biotech affiliation"
authors = ["Aryan Gupta <aryangupta6227@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["pubmed", "cli", "biotech", "pharma", "papers", "ncbi"]
packages = [
    { include = "pubmed_fetcher" }
]
homepage = "https://github.com/yourusername/pubmed-paper-fetcher"
repository = "https://github.com/yourusername/pubmed-paper-fetcher"

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.32.4"
pandas = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry.scripts]
get-papers-list = "cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
